--- a/public/style.css
+++ b/public/style.css
@@ -1,323 +1,2 @@
-body {
-  font-family: 'Didot';
-  font-size: 16px;
-  padding-bottom: 50px;
-  padding-top: 50px;
-  background-color: rgb(255, 255, 255);
-}
-
-ul {
-  list-style-type: none;
-  text-decoration: none;
-}
-
-nav {
-  background-color: white;
-  margin-bottom: 30px;
-}
-
-.navbar-nav {
-  flex-direction: row;
-}
-
-.nav-link {
-  flex-direction: row;
-}
-
-.navbar-nav li {
-  padding: 0 25px;
-}
-
-.footer {
-  position: fixed;
-  height: 70px;
-  font-size: 14px;
-  padding: 28px 0;
-  width: 100%;
-  color: rgba(0, 0, 0, 0.5);
-  background-color: white;
-  text-align: center;
-  left: 0;
-  bottom: 0;
-  z-index: 100;
-}
-
-.hero {
-  background-image: url(https://cdn.stocksnap.io/img-thumbs/960w/LJB9IHYKU9.jpg);
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  background-attachment: fixed;
-}
-
-.hero-text-box {
-  position: absolute;
-  width: 1140px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-60%, -60%);
-  color: white;
-}
-
-.about-us {
-  margin-top: 50px;
-  padding: 50px;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.about-us h3 {
-  font-size: 25px;
-}
-
-h3:after {
-  display: block;
-  height: 2px;
-  background-color: rgba(0, 0, 0, 0.5);
-  content: ' ';
-  width: 200px;
-  margin: 0 auto;
-  margin-top: 15px;
-}
-
-.about-us p {
-  padding-top: 30px;
-  padding-left: 80px;
-  font-size: 18px;
-  text-align: left;
-}
-
-.standard-btn {
-  color: white;
-  background-color: black;
-  border: 1.5px solid black;
-  margin: 20px 5px 40px 5px;
-  padding: 8px;
-}
-
-.standard-btn:hover {
-  background-color: black;
-  color: white;
-}
-
-.remove-btn {
-  color: white;
-  background-color: rgb(220, 0, 0);
-  border: 1.5px solid rgb(220, 0, 0);
-  margin: 20px 5px 40px 5px;
-  padding: 8px;
-}
-
-.remove-btn:hover {
-  background-color: rgb(220, 0, 0);
-  color: white;
-}
-
-.product-list-img {
-  width: 40px;
-  height: 40px;
-}
-
-.single-product-img {
-  width: 250px;
-  height: 250px;
-  margin-bottom: 30px;
-}
-
-.login-form {
-  margin-top: 50px;
-}
-
-.product-list {
-  margin-top: 50px;
-}
-
-.cart-list {
-  margin-top: 50px;
-}
-
-.checkout-page {
-  margin-top: 50px;
-}
-
-.single-product {
-  margin-top: 10px;
-  color: rgba(0, 0, 0, 0.5);
-  text-align: center;
-}
-
-.nav-menu {
-  padding: 15px 0;
-  padding-left: 40px;
-}
-
-.nav-login {
-  padding-right: 120px;
-}
-
-.product-list img {
-  height: 300px;
-  width: 300px;
-  object-fit: cover;
-}
-
-.reviews-card {
-  margin-bottom: 100px;
-  color: rgba(0, 0, 0, 0.5);
-  text-align: center;
-}
-
-.single-product-card {
-  margin: 100px 0;
-}
-
-.add-to-cart-button {
-  margin-bottom: 40px;
-}
-
-.single-user {
-  margin-top: 50px;
-  text-align: center;
-}
-
-.admin-user {
-  text-align: center;
-  /* border: 1px rgba(0, 0, 0, 0.5) solid; */
-}
-.admin-btn {
-  color: rgb(25, 119, 53);
-  background-color: white;
-  border: 1.5px solid rgb(25, 119, 53);
-  margin-top: 20px;
-  margin-bottom: 40px;
-  padding: 8px;
-  margin: 10px;
-}
-
-.admin-btn:hover {
-  background-color: rgb(25, 119, 53);
-  color: white;
-}
-
-.edit-btn {
-  color: rgb(0, 139, 220);
-  background-color: white;
-  border: 1.5px solid rgb(0, 139, 220);
-  margin-top: 20px;
-  margin-bottom: 40px;
-  padding: 8px;
-}
-
-.edit-btn:hover {
-  background-color: rgb(0, 139, 220);
-  color: white;
-}
-
-.login-buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.login-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Brush Script MT';
-}
-
-.login-subheader {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: gray;
-  font-size: 14px;
-  font-family: 'Didot';
-}
-
-.errors {
-  color: red;
-}
-
-.single-cart-img {
-  float: left;
-  max-width: 60%;
-  max-height: 60%;
-  margin-bottom: 30px;
-  align-items: left;
-}
-
-.single-cart-info {
-  float: left;
-  margin-left: 50px;
-}
-
-.cart-img-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.remove-cart-btn {
-  margin-left: 40px;
-}
-
-.cart-item-image {
-  height: auto;
-  max-height: 100px;
-}
-
-.account-lineitem-image {
-  height: auto;
-  max-height: 150px;
-}
-
-.price-color {
-  color: rgb(215, 42, 42);
-}
-
-.cart-summary {
-  margin-top: 10px;
-}
-
-.standard-btn-no-margin {
-  color: black;
-  background-color: white;
-  border: 1.5px solid black;
-  margin-bottom: 40px;
-  padding: 8px;
-}
-
-.btn-link {
-  padding-left: 0px;
-  font-size: 1.7rem;
-}
-
-.bigger-font {
-  font-size: 1.3rem;
-}
-
-.card-body,
-.card-within-card-padding {
-  padding: 2% 0;
-}
-
-.row-for-order {
-  max-height: 150px;
-}
-
-ul#flex-container {
-  margin: 0;
-  padding: 0;
-  flex-wrap: wrap;
-  display: flex;
-  align-content: center;
-}
-
-.products-li {
-  list-style-type: none;
-  width: 300px;
-  overflow-x: auto;
-  float: left;
-  margin-right: 10px;
-}
+html {
+  font-size: 62.5%; }
