--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,10 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  font-family: 'Didot';
+  padding-bottom: 5rem;
+  padding-top: 5rem;
+  background-color: rgb(255, 255, 255);
+}
