--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,6 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: 'Didot';
   padding-bottom: 5rem;
   padding-top: 5rem;
   background-color: white; }
@@ -56,3 +55,34 @@ body {
 .btn-link {
   padding-left: 0px;
   font-size: 1.8rem; }
+
+.login {
+  height: 100vh; }
+  .login__form {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%; }
+    .login__form__header {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 10rem;
+      font-size: 1rem;
+      margin-top: 5rem; }
+      .login__form__header img {
+        height: 6rem; }
+  .login__submit {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; }
+    .login__submit__button {
+      margin: 1rem;
+      width: 20rem; }
+  .login__image {
+    background-image: url("https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
