--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,37 @@
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  font-family: 'Roboto'; }
 
 body {
   padding-bottom: 5rem;
   padding-top: 7rem;
   background-color: white; }
 
-.standard-btn {
+.primary-btn {
+  font-size: 2rem;
   color: white;
   background-color: black;
   border: 0.15rem solid black;
   margin: 2rem 0.5rem 4rem 0.5rem;
-  padding: 0.8rem; }
-  .standard-btn:hover {
+  padding: 0.8rem;
+  text-transform: uppercase;
+  width: 25rem; }
+  .primary-btn:hover {
     cursor: pointer;
-    background-color: white;
-    color: black; }
+    transform: scale(1.1); }
+
+.secondary-btn {
+  font-size: 2rem;
+  color: black;
+  background-color: rgba(0, 0, 0, 0);
+  border: 0.15rem solid black;
+  margin: 2rem 0.5rem 4rem 0.5rem;
+  padding: 0.8rem;
+  text-transform: uppercase;
+  width: 25rem; }
+  .secondary-btn:hover {
+    cursor: pointer;
+    transform: scale(1.1); }
 
 .remove-btn {
   color: white;
@@ -64,6 +80,36 @@ body {
     position: absolute;
     top: 50%;
     transform: translateY(-50%); }
+
+.home {
+  position: absolute; }
+  .home-image {
+    height: 80vh;
+    width: 100vw;
+    background-image: url("https://images.unsplash.com/photo-1529511582893-2d7e684dd128?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2090&q=80");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto; }
+    .home-image-content {
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+      text-align: center;
+      color: white;
+      font-size: 3rem;
+      font-weight: 500; }
+  .home-about-image {
+    object-fit: cover;
+    width: 100%; }
+  .home-about-text {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
+    align-items: center; }
+    .home-about-text h3 {
+      font-size: 3rem; }
+    .home-about-text p {
+      font-size: 1.3rem; }
 
 .login {
   height: 100vh; }
