--- a/sass/pages/_login.scss
+++ b/sass/pages/_login.scss
@@ -1,14 +1,14 @@
 .login {
   height: 100vh;
 
-  &__form {
+  &-form {
     padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
 
-    &__header {
+    &-header {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -23,18 +23,18 @@
     }
   }
 
-  &__submit {
+  &-submit {
     display: flex;
     flex-direction: row;
     justify-content: center;
 
-    &__button {
+    &-button {
       margin: 1rem;
       width: 20rem;
     }
   }
 
-  &__image {
+  &-image {
     background-image: url('https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60');
     background-repeat: no-repeat;
     background-size: cover;
