--- a/public/style.css
+++ b/public/style.css
@@ -72,7 +72,7 @@ body {
   padding-left: 0px;
   font-size: 1.8rem; }
 
-.footer-text {
+.footer {
   height: 3rem;
   font-size: 1.4rem;
   padding: 1rem 0;
