--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'base/base';
 
 @import 'components/buttons';
+@import 'components/categorySelector';
 @import 'components/footer';
 @import 'components/nav';
 
