--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
   color: white;
   background-color: black;
   border: 0.15rem solid black;
-  margin: 2rem 0.5rem 4rem 0.5rem;
+  margin: 2rem 0.5rem 0rem 0.5rem;
   padding: 0.8rem;
   text-transform: uppercase;
   width: 25rem; }
@@ -74,7 +74,8 @@ body {
 
 .selector-list {
   list-style: none;
-  text-align: left; }
+  text-align: left;
+  width: 15rem; }
   .selector-list-item:hover {
     cursor: pointer;
     font-weight: 500; }
@@ -216,3 +217,58 @@ body {
     .products-item-price {
       font-size: 1.8rem;
       font-weight: 500; }
+
+.product {
+  padding: 5 15rem;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center; }
+  .product-image-container {
+    width: 42%; }
+  .product-image {
+    height: 60rem;
+    width: 60rem;
+    object-fit: cover; }
+  .product-info {
+    width: 42%;
+    padding: 0 10rem; }
+  .product-name {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 3.5rem; }
+  .product-price {
+    font-weight: 450;
+    font-size: 2.5rem; }
+  .product-description {
+    padding: 3.5rem 0;
+    font-size: 1.75rem; }
+  .product-button {
+    text-align: center; }
+  .product-reviews {
+    padding: 5rem 20rem; }
+    .product-reviews-container {
+      padding: 3rem; }
+    .product-reviews-header {
+      text-transform: uppercase;
+      font-weight: 600;
+      font-size: 3rem; }
+    .product-reviews-lead {
+      display: flex;
+      flex: row;
+      align-items: center; }
+    .product-reviews-title {
+      display: inline-block;
+      text-transform: uppercase;
+      font-size: 2rem;
+      font-weight: 450; }
+    .product-reviews-stars {
+      display: inline-block;
+      padding: 1rem; }
+    .product-reviews-author {
+      display: inline-block;
+      font-style: italic; }
+    .product-reviews-content {
+      font-size: 1.5rem; }
+
+.item-in-cart-text {
+  display: block; }
