--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'components/footer';
 @import 'components/nav';
 
+@import 'pages/cart';
 @import 'pages/home';
 @import 'pages/login';
 @import 'pages/products';
